--- a/src/app/store/components/store/store.component.html
+++ b/src/app/store/components/store/store.component.html
@@ -1,1 +1,6 @@
-<p>store works!</p>
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <h1>My Store</h1>
+</mat-toolbar>
+<div class="main-wrapper">
+  <router-outlet></router-outlet>
+</div>
