feat: Implement cart logic

--- a/src/app/store/components/products-list/products-list.component.html
+++ b/src/app/store/components/products-list/products-list.component.html
@@ -2,6 +2,7 @@
   <div class="product-list" fxLayout="row wrap" fxLayoutAlign="center center">
     <app-product-item
       *ngFor="let product of products"
-      [product]="product"></app-product-item>
+      [product]="product"
+      (addItem)="onAddItem($event)"></app-product-item>
   </div>
 </main>
