--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,15 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
   <h1>My Store</h1>
+  <div fxFlex fxLayout fxLayoutAlign="center center">
+    <nav mat-tab-nav-bar mat-align-tabs="center" color="accent" color="accent">
+      <a
+        mat-tab-link
+        *ngFor="let route of routes"
+        [routerLink]="route.url"
+        [active]="activeLink == route.url"
+        (click)="activeLink = route.url">
+        {{ route.name }}
+      </a>
+    </nav>
+  </div>
 </mat-toolbar>
