--- a/src/app/store/components/products-list/products-list.component.scss
+++ b/src/app/store/components/products-list/products-list.component.scss
@@ -1,3 +1,11 @@
 main {
-  padding: 20px;
+  padding: 20px 50px;
+  background-color: #FBFBFB;
+
+  .product-list {
+    mat-card {
+      border-radius: 8px;
+      margin: 12px;
+    }
+  }
 }
