--- a/src/app/shared/components/product-item/product-item.component.scss
+++ b/src/app/shared/components/product-item/product-item.component.scss
@@ -17,5 +17,13 @@
 
   p {
     font-size: 1.1em;
+
+    &.qty {
+      margin-top: 0;
+
+      span {
+        font-weight: 500;
+      }
+    }
   }
 }
