--- a/src/app/shared/components/qty-input/qty-input.component.html
+++ b/src/app/shared/components/qty-input/qty-input.component.html
@@ -1,7 +1,7 @@
 <div fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
-  <button mat-icon-button color="accent" [disabled]="diabledRemoveButton()" (click)="onRemove()" *ngIf="!isCart"><mat-icon>remove</mat-icon></button>
+  <button mat-icon-button color="accent" [disabled]="disabledRemoveButton" (click)="onRemove()" *ngIf="!isCart"><mat-icon>remove</mat-icon></button>
   <mat-form-field appearance="outline">
-    <mat-select [(ngModel)]="qty">
+    <mat-select [(ngModel)]="qty" (ngModelChange)="checkItemsInCart()">
       <mat-option value="1">1</mat-option>
       <mat-option value="2">2</mat-option>
       <mat-option value="3">3</mat-option>
